--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "buildLocal": "ng build --configuration=local --localize",
     "buildLocalToStagingApi": "ng build --configuration=local-to-staging-api --localize",
     "buildStaging": "ng build --configuration=staging --localize",
-    "buildProd": "ng build --configuration=production --localize",
+    "build": "ng build --configuration=production --localize",
     "e2e": "ng e2e",
     "heroku-postbuild": "bash heroku.sh",
     "lint": "ng lint",
     "sitemap": "node src/sitemap-generator.ts > seo/sitemap.xml",
     "ng": "ng",
-    "startLocal": "ng serve --configuration=local --port 4200",
+    "start": "ng serve --configuration=local --port 4200",
     "startLocalFromIPhone": "ng serve --configuration=local --port 4200 --host 0.0.0.0 --disable-host-check true",
     "startLocalToStagingApi": "ng serve --configuration=local-to-staging-api --port 4200",
     "startLocalFromIPhoneToStagingApi": "ng serve --configuration=local-to-staging-api --port 4200 --host 0.0.0.0 --disable-host-check true",
     "startStaging": "node server.js --configuration=staging",
-    "start": "node server.js --configuration=production",
+    "startJS": "node server.js --configuration=production",
     "outdated": "node src/dependency-checker.ts > docs/OUTDATED.md",
     "test": "ng test",
     "updateMessages": "ng extract-i18n && node ./src/messages-generator.js",
